--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.8"
 flask-discord = "^0.1.64"
 flask = "^2.0.1"
 replit = "^3.1.0"
+discord = "^1.7.3"
 
 [tool.poetry.dev-dependencies]
 
