--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ flask-discord = "^0.1.64"
 flask = "^2.0.1"
 replit = "^3.1.0"
 oauthlib = "^3.1.1"
-"discord.py" = "^1.7.3"
+discord = "2.3.0"
+urllib3 = "1.26.6"
 
 [tool.poetry.dev-dependencies]
 
